--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,5 @@
-#Project properties
-#Mon Jan 10 18:48:04 CET 2011
 project.organization=akka.io
 project.name=AkkaTraining
-sbt.version=0.7.5.RC0
-project.version=1.0
-build.scala.versions=2.8.1
-project.initialize=false
+project.version=1.1.2
+sbt.version=0.7.7
+build.scala.versions=2.9.0-1
